--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 				<h3>Singapore</h3>
 			</div>
 		</div>	
-
-		<button data-tf-slider="Hcgc80CD" data-tf-width="550" data-tf-iframe-props="title=html form" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#FFFFFF;color:#000000;font-size:17px;border-radius:5px;padding:0 28px;font-weight:bold;height:42.5px;cursor:pointer;line-height:42.5px;text-align:center;margin:0;text-decoration:none;">Feedback?</button><script src="//embed.typeform.com/next/embed.js"></script>
+		<div data-tf-widget="Hcgc80CD" data-tf-iframe-props="title=html form" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 	</div>
 </body>
 
